# portfolio-dashboard

./: .gitignore  BACKLOG.md  README.md
.claude/: launch.json
.github/workflows/: api.yml  frontend.yml
_bmad-output/: PRD.md
_bmad-output/implementation-artifacts/: 1-1-scaffold-monorepo-with-frontend-and-api-projects.md  1-2-api-database-connections-and-health-endpoint.md  1-3-frontend-app-shell-with-tab-navigation.md  1-4-health-tab-agent-status-and-vps-metrics-display.md  2-1-supervisor-api-endpoint.md  2-2-supervisor-tab-ui.md  3-1-funnel-api-endpoint.md  3-2-funnel-tab-drop-off-visualization-and-drill-down.md  4-1-holdings-api-endpoint.md  4-2-holdings-tab-positions-table-with-pnl-and-risk-status.md  5-1-performance-api-endpoint.md  5-2-performance-tab-portfolio-pnl-and-benchmark-charts.md  5-3-performance-tab-prediction-accuracy-and-arena-comparison.md  6-1-decisions-api-endpoint.md  (+10 more)
api/: .env.example  pyproject.toml
api/src/: config.py  main.py
api/src/db/: connection.py  costs.py  debug.py  live_state.py  portfolio.py  supervisor.py
api/src/routers/: costs.py  debug.py  decisions.py  funnel.py  health.py  holdings.py  performance.py  strategies.py  supervisor.py
api/tests/: conftest.py  test_connection.py  test_costs.py  test_debug.py  test_decisions.py  test_funnel.py  test_health.py  test_holdings.py  test_performance.py  test_supervisor.py  test_supervisor_queries.py  test_verification.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
missions/: dashboard-infra-quick-wins.md  decisions-deep-enrichment.md
(+89 files in other folders)
